--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ max-line-length = 100
 doctests = True
 enable-extensions = G
 isort-show-traceback = True
+max-local-variables = 8
 
 # clean default ignore list
 ignore =
