--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Ramil Albakov <ralbakov10@gmail.com>"]
 python = "^3.8"
 cx-Oracle = "^8.3.0"
 python-dotenv = "^0.20.0"
+openpyxl = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.16.1"
