add excel module to fill missed cells to excel file

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,8 @@ max-local-variables = 8
 ignore =
 
 per-file-ignores =
-  # it is possibble to have prints in scripts
   network_vs_atoll/scripts/*.py: WPS421
+  network_vs_atoll/excel.py: WPS437, WPS420
 
 [tool:pytest]
 norecursedirs = __pycache__
